Istio/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argo-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
